# vanna

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  resource_benchmark.cxx
include/vanna/: allocator.hpp  byte.hpp  default.hpp  memory_resource.hpp  monotonic.hpp  monotonic_allocator.hpp  new_delete.hpp  resource.hpp
include/vanna/detail/: macro.hpp
include/vanna/pmr/: memory_resource.hpp  monotonic_buffer.hpp  new_delete_resource.hpp
src/vanna/: default.cxx  monotonic.cxx  new_delete.cxx  resource.cxx
src/vanna/pmr/: memory_resource.cxx  monotonic_buffer.cxx  new_delete_resource.cxx
test/: CMakeLists.txt  monotonic.cxx  monotonic_test.cxx  new_delete_test.cxx  stl_containers.cxx
